tests/solidity-semantic-tests/out/errors/require_error_condition_evaluated_only_once/C.approval.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_condition_evaluated_only_once.sol.C.approval_program() -> uint64:
main:
    intcblock 1 0 64
    bytecblock "counter"
    txn ApplicationID
    bnz main_after_if_else@2
    intc_1 // 0
    itob
    bytec_0 // "counter"
    swap
    app_global_put
    intc_0 // 1
    return

main_after_if_else@2:
    pushint 4096
    bzero
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0x87dd5a4b 0x74c48465 // method "getCounter()uint512", method "f(bool)void"
    txna ApplicationArgs 0
    match getCounter f
    err


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_condition_evaluated_only_once.sol.C.getCounter[routing]() -> void:
getCounter:
    intc_1 // 0
    bytec_0 // "counter"
    app_global_get_ex
    assert // check counter exists
    dup
    len
    intc_2 // 64
    <=
    assert // overflow
    intc_2 // 64
    bzero
    b|
    pushbytes 0x151f7c75
    swap
    concat
    log
    intc_0 // 1
    return


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_condition_evaluated_only_once.sol.C.f[routing]() -> void:
f:
    txna ApplicationArgs 1
    dup
    len
    intc_0 // 1
    ==
    assert // invalid number of bytes for arc4.bool
    intc_1 // 0
    getbit
    dup
    intc_0 // 1
    <=
    assert // ABI bool validation
    intc_1 // 0
    bytec_0 // "counter"
    app_global_get_ex
    assert // check counter exists
    pushbytes 0x01
    b+
    bytec_0 // "counter"
    swap
    app_global_put
    assert // CustomError
    intc_0 // 1
    return
